# sigil

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  action.yml  autoresearch.jsonl  autoresearch.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-commit.sh
.claude/skills/: pm.md  test.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: autoresearch.yml  ci.yml  codeql.yml  integration.yml  release.yml  semgrep.yml  sigil.yml  tests.yml
.sigil/: .memory-selection.json  config.yml
.sigil/ideas/: adversarial-probes-synthetic-hallucination-checks-for-valida.md  adversarial-validation-the-skeptical-challenger-persona-10.md  adversarial-validation-the-skeptical-challenger-persona-2.md  adversarial-validation-the-skeptical-challenger-persona-3.md  adversarial-validation-the-skeptical-challenger-persona-4.md  adversarial-validation-the-skeptical-challenger-persona-5.md  adversarial-validation-the-skeptical-challenger-persona-6.md  adversarial-validation-the-skeptical-challenger-persona-7.md  adversarial-validation-the-skeptical-challenger-persona-8.md  adversarial-validation-the-skeptical-challenger-persona-9.md  adversarial-validation-the-skeptical-challenger-persona.md  agentic-mcp-tool-brokering-for-high-density-toolsets.md  agentic-mcp-tool-brokering-for-infinite-extensibility-10.md  agentic-mcp-tool-brokering-for-infinite-extensibility-3.md  agentic-mcp-tool-brokering-for-infinite-extensibility-4.md  agentic-mcp-tool-brokering-for-infinite-extensibility-5.md  agentic-mcp-tool-brokering-for-infinite-extensibility-6.md  agentic-mcp-tool-brokering-for-infinite-extensibility-7.md  agentic-mcp-tool-brokering-for-infinite-extensibility-8.md  agentic-mcp-tool-brokering-for-infinite-extensibility-9.md  agentic-mcp-tool-brokering-for-infinite-extensibility.md  autonomous-tdd-spec-driven-test-redlining-10.md  autonomous-tdd-spec-driven-test-redlining-2.md  autonomous-tdd-spec-driven-test-redlining-3.md  autonomous-tdd-spec-driven-test-redlining-4.md  autonomous-tdd-spec-driven-test-redlining-5.md  autonomous-tdd-spec-driven-test-redlining-6.md  autonomous-tdd-spec-driven-test-redlining-7.md  autonomous-tdd-spec-driven-test-redlining-8.md  autonomous-tdd-spec-driven-test-redlining-9.md  autonomous-tdd-spec-driven-test-redlining.md  budget-driven-execution-pruning-for-high-value-runs-10.md  budget-driven-execution-pruning-for-high-value-runs-2.md  budget-driven-execution-pruning-for-high-value-runs-3.md  budget-driven-execution-pruning-for-high-value-runs-4.md  budget-driven-execution-pruning-for-high-value-runs-5.md  budget-driven-execution-pruning-for-high-value-runs-6.md  budget-driven-execution-pruning-for-high-value-runs-7.md  budget-driven-execution-pruning-for-high-value-runs-8.md  budget-driven-execution-pruning-for-high-value-runs-9.md  (+287 more)
.sigil/memory/: INDEX.md  agent-framework.md  api-models.md  api.md  architecture.md  configuration.md  dependencies.md  (+12 more)
examples/: github-action-manual.yml  github-action.yml  sigil.yml
sigil/: __main__.py  agent.py  agent_config.py  attempts.py  chronic.py  cli.py  config.py  discovery.py  executor.py  github.py  ideation.py  knowledge.py  llm.py  maintenance.py  mcp.py  memory.py  models.py  summarizer.py  utils.py  validation.py
tests/: test_sandbox.py
(+130 files in other folders)
