[project]
name = "sigil"
version = "0.1.0"
description = "Autonomous repo improvement agent — finds improvements and ships PRs while you sleep."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "litellm>=1.82",
    "PyGithub>=2.6",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tenacity>=9.1.4",
]

[project.scripts]
sigil = "sigil.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".sigil/worktrees"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real LLM API calls (require provider API keys, cost tokens)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
