[project]
name = "sigil-py"
version = "1.0.1"
description = "An autonomous AI coding agent that codes while you don't."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Dylan Murray"}]
keywords = ["agent", "automation", "code-quality", "llm", "refactoring", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

dependencies = [
    "typer>=0.15",
    "litellm>=1.82",
    "PyGithub>=2.6",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tenacity>=9.1.4",
    "mcp>=1.26.0",
    "vulture>=2.14",
]

[project.scripts]
sigil = "sigil.cli:app"

[project.urls]
Homepage = "https://github.com/dylan-murray/sigil"
Repository = "https://github.com/dylan-murray/sigil.git"
Issues = "https://github.com/dylan-murray/sigil/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sigil"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".sigil/worktrees"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v -rs"
markers = [
    "integration: real LLM API calls (require provider API keys, cost tokens)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.6",
]
